Some fixes to menu on mobile and add analytics

--- a/components/layout/Header.module.scss
+++ b/components/layout/Header.module.scss
@@ -1,5 +1,5 @@
 .header {
-  @apply relative z-10 flex-grow-0 w-full bg-white border-b-4 border-brand-500;
+  @apply fixed md:relative z-10 flex-grow-0 w-full bg-white border-b-4 border-brand-500;
 }
 
 .nav {
@@ -8,12 +8,4 @@
 
 .brand {
   @apply w-full font-bold text-center md:w-auto md:text-left;
-}
-
-.mobileMenu {
-  @apply absolute top-0 right-0 flex flex-col items-center justify-center w-16 h-full rounded md:hidden;
-}
-
-.mobileMenuTapTarget {
-  @apply p-2 transition-colors duration-200 border rounded bg-brand-300 hover:bg-brand-500 border-brand-500;
 }
