--- a/components/menu/Menu.module.scss
+++ b/components/menu/Menu.module.scss
@@ -1,5 +1,5 @@
 .menu {
-  @apply flex-shrink-0 h-full text-center select-none text-brand-600 absolute md:relative w-full;
+  @apply flex-shrink-0 text-center select-none text-brand-600 absolute md:relative w-full;
   &__hide {
     @apply hidden md:flex;
   }
@@ -30,18 +30,25 @@
 }
 
 .desktopMenu {
-  @apply sticky md:relative top-0 left-0 w-screen md:w-full md:h-auto lg:block opacity-0 md:opacity-100 transition-opacity duration-500;
+  @apply fixed md:relative top-0 left-0 w-screen md:w-full md:h-auto lg:block;
   &__open {
-    @apply h-screen opacity-100;
+    @apply bg-white opacity-100 fixed;
   }
 }
 
 .mobileMenu {
-  @apply block lg:hidden;
+  @apply md:hidden relative text-center justify-center opacity-0 md:opacity-100 transition-opacity duration-500;
+  &__close {
+    @apply hidden md:flex;
+  }
+
+  &__open {
+    @apply min-h-screen flex flex-col opacity-100 bg-white;
+  }
 }
 
 .mobileMenuTapTarget {
-  @apply absolute right-4 top-5;
+  @apply fixed right-4 top-5 md:hidden;
 }
 
 .chevron {
@@ -52,5 +59,5 @@
 }
 
 .closeMobileMenu {
-  @apply md:hidden;
+  @apply md:hidden cursor-pointer;
 }
